fix alignment

--- a/_sass/overrides/_base.scss
+++ b/_sass/overrides/_base.scss
@@ -184,8 +184,8 @@ p {font-weight: 200;}
     flex-wrap: wrap;
   }
   .services-card-container div {
-    max-width: 540px;
-    min-height: 250px;
+    max-width: 360px;
+    min-height: 390px;
   }
 }
 
